# richmail

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: monitoring.py
src/: client.py  server.py  smtpd.py
src/api/: main.py
src/api/auth/: routes.py  schemas.py  security.py  utils.py
src/api/conf/: app.py  db.py  settings.py
src/api/outbox/: models.py  urls.py  views.py
src/api/routers/: inbox.py  model.py  outbox.py  schemas.py  security.py
src/api/setu/: asgi.py  settings.py  urls.py  wsgi.py
src/frontend/: main.html
src/smtp/: client.py  exceptions.py  features.py  log_hierarchy.py  server.py  setuthread.py  smtpd.py  utils.py
src/smtp/db/: config.py  db_config.py
src/smtp/logger/: log_hierarchy.py  setuplog.py  transc_log.py
src/smtp/mime/: db.py  headers.py  parser.py  utils.py
